Finished last 3 assignements

--- a/lab01/zad_07/zad_07.less
+++ b/lab01/zad_07/zad_07.less
@@ -1,1 +1,15 @@
-@step: 3px;
+.C {
+    position: relative;
+    right: 40px;
+
+    .A {
+        position: relative;
+        left: 40px;
+    
+        .B {
+            position: relative;
+            left: 40px;
+            bottom: 30px;
+        }
+    }
+}
