Fixed zad_04 from lab_02

--- a/lab_02/zad_04/zad_04.less
+++ b/lab_02/zad_04/zad_04.less
@@ -59,6 +59,8 @@ body {
     #stopka {
         top: unset;
         bottom: 0;
+        border-bottom: unset;
+        border-top: solid 1px black;
         left: 0;
     }
 }
